# align-failures-taxonomy-db56-claude

./: .resource_finder_complete  README.md  REPORT.md  literature_review.md  planning.md  priority_papers.json  pyproject.toml  resources.md
.neurico/: idea.yaml  pipeline_results.json  pipeline_state.json
code/: README.md
datasets/: README.md
logs/: execution_claude_transcript.jsonl  paper_writer_prompt.txt  research_prompt.txt  resource_finder_prompt.txt  session_instructions.txt
paper_draft/: main.tex  references.bib
paper_search_results/: AI_agent_reward_hacking_sandbagging_deception_evaluation_20260505_014226.jsonl  AI_scientist_agentic_research_automation_failure_modes_20260505_014506.jsonl  LLM_agent_research_fabrication_negative_results_publication_bias_20260505_014116.jsonl  alignment_failures_AI-driven_research_scientific_misconduct_20260505_014004.jsonl  all_combined.json  autonomous_AI_scientist_taxonomy_hallucination_overclaiming_20260505_014154.jsonl  curated_high_relevance.json  main_query_full.json  priority_lookup.json  q2_reward_hacking.json  q3_autonomous.json  q4_negative.json  q5_ai_scientist.json  q6_goodhart.json  q7_scheming.json  scheming_alignment_faking_deceptive_AI_sleeper_agents_20260505_014519.jsonl  specification_gaming_Goodharts_law_misalignment_language_models_20260505_014441.jsonl
papers/: README.md
results/: compound_distribution.csv  compound_summary.json  coverage_matrix.csv  coverage_summary.csv  judge_agreement.json  judge_primary.json  judge_sampled_artifacts.json  judge_secondary.json  prevalence.csv  probe_summary.csv  (+5 more)
(+291 files in other folders)
