[project]
name = "research-workspace"
version = "0.1.0"
description = "Research workspace for AI-driven research alignment failures taxonomy"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.98.1",
    "matplotlib>=3.10.9",
    "numpy>=2.2.6",
    "openai>=2.34.0",
    "pandas>=2.3.3",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "tenacity>=9.1.4",
    "tqdm>=4.67.3",
]

